--- a/TODO.txt
+++ b/TODO.txt
@@ -1,14 +1,18 @@
 Unit Tests:
 
-Options:
-- dictionary file(s)
-- input selector
-- output selector
-- space placement
-- undo size
 
 Listener for cursor moved:
 - onSurroundingTextChanged
+
+Load multiple dictionaries
+
+Better dictionary choosing gui
+
+Formatter
+- remove space at start
+- remove space at end
+- capitalize
+- lowercase
 
 
  DONE
@@ -32,3 +36,10 @@ Translator:
         recurse with new translation only
       else (preview empty):
         add raw stroke
+        
+Options:
+- dictionary file(s)
+- input selector
+- output selector
+- space placement
+- undo size
